<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Button
            android:id="@+id/Go31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="first" />

        <Button
            android:id="@+id/Go32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="second" />

        <Button
            android:id="@+id/Go34"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="four" />

    </LinearLayout>

</layout>